# SHL-Task

./: .gitignore  README.md  Vector_store.py  agent.py  app.py  docs_builder.py  main.py  models.py  pyproject.toml  requirements.txt  tools.py
sample_conversations/GenAI_SampleConversations/: C1.md
utils/: format.py  functions.py
vector_store/3d67d0f7-c2d6-473c-ad94-b80f974d400e/: index_metadata.pickle
