[project]
name = "salesforce-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "fastapi[standard]>=0.138.2",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
