[project]
name = "salesforce-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.138.2",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
